[gd_scene load_steps=9 format=3 uid="uid://crg3oumqxj1js"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_iko52"]
[ext_resource type="PackedScene" uid="uid://c1tylkxehikdn" path="res://Scenes/trail.tscn" id="2_o6lqu"]
[ext_resource type="Shader" path="res://Assets/Shaders/player_visibility.gdshader" id="3_yd07q"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gmosl"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_r7n3k"]
size = Vector2(1, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_dkvct"]
shader = ExtResource("3_yd07q")
shader_parameter/inside_color = null
shader_parameter/back_color = Color(1, 1, 1, 0.866667)
shader_parameter/width = 0.04

[sub_resource type="QuadMesh" id="QuadMesh_8tnpc"]

[sub_resource type="QuadMesh" id="QuadMesh_er52s"]

[node name="Player" type="RigidBody2D" groups=["player"]]
z_index = 1
position = Vector2(-275, -45)
lock_rotation = true
script = ExtResource("1_iko52")

[node name="ground_checker" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ground_checker"]
shape = SubResource("RectangleShape2D_gmosl")

[node name="backToEarthTimer" type="Timer" parent="."]
wait_time = 0.225

[node name="Trail" parent="." instance=ExtResource("2_o6lqu")]
position = Vector2(-300, -39)
points = PackedVector2Array()

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
modulate = Color(0.881937, 0.881937, 0.881937, 1)
scale = Vector2(20, 20)
shape = SubResource("RectangleShape2D_r7n3k")
debug_color = Color(0.00299335, 0.209108, 0.831926, 0.701961)

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[node name="dissolveTimer" type="Timer" parent="."]

[node name="MeshInstance2D" type="MeshInstance2D" parent="."]
modulate = Color(2, 2, 1, 1)
self_modulate = Color(0, 0, 0, 1)
clip_children = 2
visibility_layer = 2
material = SubResource("ShaderMaterial_dkvct")
scale = Vector2(20, 20)
mesh = SubResource("QuadMesh_8tnpc")

[node name="innner" type="MeshInstance2D" parent="MeshInstance2D"]
visible = false
show_behind_parent = true
scale = Vector2(1.05, 1.05)
mesh = SubResource("QuadMesh_er52s")

[connection signal="body_entered" from="ground_checker" to="." method="_on_ground_checker_body_entered"]
[connection signal="body_exited" from="ground_checker" to="." method="_on_ground_checker_body_exited"]
[connection signal="timeout" from="backToEarthTimer" to="." method="_on_back_to_earth_timer_timeout"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
[connection signal="timeout" from="dissolveTimer" to="." method="_on_dissolve_timer_timeout"]
